# ttb-label-verify

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/: config.py  main.py
api/models/: batch.py  label.py  upload.py
api/routes/: labels.py  upload.py
api/services/: openai_client.py  state.py  storage.py  verification.py
api/validators/: beer.py  common.py  health_warning.py  spirits.py  wine.py
docs/: architecture.md  brief.md  prd.md  prefences.md
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  styles.css
