[project]
name = "ttb-label-verifier"
version = "0.1.0"
description = "TTB AI label verification prototype"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.129.0",
  "uvicorn[standard]>=0.41.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.13.0",
  "python-multipart>=0.0.22",
  "openai>=2.21.0",
  "loguru>=0.7.3",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.2",
]
